--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getPro
 minecraft {
     mappings channel: 'snapshot', version: '20201028-1.16.3'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-    
+
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     runs {
         client {
@@ -36,7 +36,7 @@ minecraft {
             properties 'mixin.env.disableRefMap': 'true'
 
             mods {
-                examplemod {
+                manaliquidizer {
                     source sourceSets.main
                 }
             }
@@ -52,7 +52,7 @@ minecraft {
             properties 'mixin.env.disableRefMap': 'true'
 
             mods {
-                examplemod {
+                manaliquidizer {
                     source sourceSets.main
                 }
             }
@@ -67,10 +67,10 @@ minecraft {
 
             properties 'mixin.env.disableRefMap': 'true'
 
-            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '--mod', 'manaliquidizer', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
-                examplemod {
+                manaliquidizer {
                     source sourceSets.main
                 }
             }
