--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,7 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.4-35.0.7'
+    minecraft 'net.minecraftforge:forge:1.16.4-35.0.15'
 
     runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.4-4.0.2.1")
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.4-4.0.2.1:api")
@@ -109,7 +109,7 @@ dependencies {
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.2-47:api")
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.2-47")
 
-    compileOnly fg.deobf("vazkii.botania:Botania:1.16.3-409:api")
+    compileOnly fg.deobf("vazkii.botania:Botania:1.16.3-409")
     runtimeOnly fg.deobf("vazkii.botania:Botania:1.16.3-409")
 }
 
