--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,14 @@ repositories {
         name "curios"
         url "https://maven.theillusivec4.top/"
     }
+    maven {
+    	name = "Progwml6 maven"
+    	url = "https://dvs1.progwml6.com/files/maven/"
+  	}
+  	maven {
+    	name = "ModMaven"
+    	url = "https://modmaven.k-4u.nl"
+  	}
 }
 
 dependencies {
